--- a/src/index.css
+++ b/src/index.css
@@ -154,8 +154,12 @@ nav ul li span:hover {
   width: 360px;
   padding: 15px;
   border-radius: 20px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
-    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  background: rgba(255, 255, 255, 0.14);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5.1px);
+  -webkit-backdrop-filter: blur(5.1px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
 .type {
   gap: 20px;
@@ -171,7 +175,7 @@ nav ul li span:hover {
   font-size: 19px;
   color: 363131;
 }
-.down_card{
+.down_card {
   flex-wrap: nowrap;
 }
 .sub_title p {
@@ -212,9 +216,15 @@ nav ul li span:hover {
   margin: 60px auto;
   width: 80%;
   height: 610px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
     rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-  border-radius: 1rem;
+  border-radius: 1rem; */
+  background: rgba(255, 255, 255, 0.14);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5.1px);
+  -webkit-backdrop-filter: blur(5.1px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
   padding: 1.5rem;
 }
 .details_img {
@@ -242,7 +252,7 @@ nav ul li span:hover {
   font-weight: bold;
   color: #000000;
 }
-.detail_type{
+.detail_type {
   justify-content: normal;
 }
 .detail_type span {
@@ -271,7 +281,7 @@ nav ul li span:hover {
   margin-top: 10px;
   margin-bottom: 10px;
 }
-.height_weight div{
+.height_weight div {
   height: 38px;
   border-radius: 5px;
   background: #98daf3;
@@ -290,7 +300,7 @@ nav ul li span:hover {
   font-size: 28px;
   margin-bottom: 2px;
 }
-.status_boxs{
+.status_boxs {
   gap: 10px;
 }
 .status_boxs div {
@@ -302,10 +312,11 @@ nav ul li span:hover {
   color: #000;
   flex-basis: 48%;
 }
-.abilities h1{
+.abilities h1 {
   margin-bottom: -4px;
 }
-.go_back button{
+.go_back button,
+.error_text button {
   border: none;
   background: #e17055;
   color: #ffffff;
@@ -318,6 +329,107 @@ nav ul li span:hover {
   transition: 0.2s;
   width: 100%;
 }
-.go_back button:hover{
+.go_back button:hover {
   background: #bb644e;
+}
+/*  Error page css */
+.error_page img {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
+.error_text {
+  background: rgba(255, 255, 255, 0.17);
+  color: #fff;
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(4.9px);
+  -webkit-backdrop-filter: blur(4.9px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 10px;
+  text-align: center;
+  padding: 20px;
+  position: absolute;
+  top: 30%;
+  left: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.error_status {
+  font-size: 4rem;
+}
+.nav_icon {
+  display: none;
+  width: 30px;
+  height: 30px;
+}
+.none {
+  display: none;
+}
+@media (max-width: 900px) {
+  /*  Header responsive css */
+  .conatiner {
+    width: 98%;
+  }
+  .logo {
+    width: 100px;
+  }
+  .logo img {
+    width: 120%;
+  }
+  .nav_icon {
+    display: block;
+  }
+  nav {
+    transition: 0.5s;
+    z-index: 3;
+  }
+  nav ul {
+    display: block !important;
+    position: absolute;
+    background: rgba(255, 255, 255, 0.14);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5.1px);
+    -webkit-backdrop-filter: blur(5.1px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    width: 177px;
+    height: 100vh;
+    display: block;
+    top: 60px;
+    padding-top: 20px;
+  }
+  nav ul li {
+    margin-bottom: 30px;
+    text-align: center;
+  }
+  /* Hero section responsive css */
+  .hero {
+    width: 95%;
+  }
+  .hero-title {
+    font-size: 2rem;
+  }
+  /*  top section responsive css */
+  .top_section img {
+    width: 80%;
+    margin-left: 25px;
+  }
+  .top_section div{
+    width: 80%;
+  }
+  .input input {
+    width: 100%;
+  }
+  /* Pokemon details page responsive css */
+  .pokemon_details {
+    height: auto;
+  }
+  .details_img{
+    flex-basis: 100%;
+  }
+  .pokemon_card_details {
+    flex-basis: 100%;
+}
 }
